<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:background="#FFFFFF"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".HelloDoctor">

    <TextView
        android:id="@+id/texthelloDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="40dp"
        android:textColor="#000000"
        android:textSize="30sp"
        android:lines="1"
        android:text="@string/hello_doctor"/>
    <TextView
        android:id="@+id/textReadyto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingEnd="0dp"
        android:textColor="#708C99"
        android:textSize="20sp"
        android:lines="2"
        android:text="@string/are_you_ready_to_see_your_patients_nnow"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#DA1A1A"
        android:text="@string/yes"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="#FFFFFF" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#FFFFFF"
        android:text="@string/not_right_now"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="#708C99" />


</LinearLayout>