<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Splash_screen">

    <TextView
        android:id="@+id/textsmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health_partner_app"
        android:layout_marginTop="90dp"
        android:textColor="#4D5A88"
        android:layout_marginLeft="20dp"
        android:textSize="30sp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/textbig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="100dp"
        android:text="@string/vios"
        android:textColor="#212F55"
        android:textStyle="bold"
        android:textSize="130sp"
        android:layout_marginStart="22dp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:src="@drawable/doc"
        android:layout_below="@id/textbig"
        android:layout_marginLeft="50dp"
        android:contentDescription="@string/todo"
        android:layout_marginStart="50dp" />

</RelativeLayout>